# SilverBond

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  Cargo.toml  README.md  justfile  package-lock.json  package.json  playwright.config.ts  tsconfig.json
docs/: README.md  agent-drivers.md  api-reference.md  architecture-overview.md  backend.md  execution-model.md  frontend.md  getting-started.md  svelte-specifics.md  tauri-desktop.md  testing.md  workflow-schema.md
public/: index.html
public/assets/: index-BwxyfgA6.css  index-Da8yDLJb.js
src/: api.rs  app.rs  driver.rs  frontend.rs  host.rs  lib.rs  main.rs  model.rs  pty_output.rs  runtime.rs  session.rs  storage.rs  util.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
templates/: build-deploy-with-approval.json  code-review-pipeline.json  research-and-summarize.json
tests/: http_api.rs
ui/: index.html  vite.config.ts
ui/e2e/: app.spec.ts
ui/src/: main.ts  styles.css
ui/src/app/: App.svelte  AppShell.svelte
ui/src/features/editor/: AddSectionMenu.svelte  ConditionBuilder.svelte  GraphEditor.svelte  InspectorPanel.svelte  NodeHeader.svelte  SchemaPresets.svelte  flowNodes.test.ts  flowNodes.ts
ui/src/features/history/: HistoryPanel.svelte
ui/src/features/reference/: ReferencePanel.svelte  ReferenceSection.svelte  referenceData.ts
ui/src/features/runtime/: RunPanel.svelte
ui/src/features/workflows/: Sidebar.svelte
ui/src/lib/api/: client.ts
ui/src/lib/components/: AutocompletePopup.svelte  ConfirmDialog.svelte  PromptTextarea.svelte  (+1 more)
workflows/: Test Workflow.json
(+7 files in other folders)
