[package]
name = "silverbond"
version = "2.0.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
async-stream = "0.3"
axum = { version = "0.8", features = ["json", "macros"] }
chrono = { version = "0.4", features = ["clock", "serde"] }
futures = "0.3"
http = "1.3"
http-body-util = "0.1"
include_dir = "0.7"
mime_guess = "2.0"
regex = "1.12"
rusqlite = { version = "0.34", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.20"
thiserror = "2.0"
tokio = { version = "1.47", features = ["fs", "io-util", "macros", "process", "rt-multi-thread", "signal", "sync", "time"] }
tower = { version = "0.5", features = ["util"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.18", features = ["serde", "v4", "v7"] }
expectrl = "0.7"
strip-ansi-escapes = "0.2"

[dev-dependencies]
tempfile = "3.20"
